--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="background">#000000</color>
-    <color name="digital_text">#ffffff</color>
+    <color name="hour_text">#ffffff</color>
+    <color name="minute_text">#ffffff</color>
+    <color name="second_text">#bbbbbb</color>
 </resources>
