--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="digital_text_size">40dp</dimen>
-    <dimen name="digital_text_size_round">45dp</dimen>
-    <dimen name="digital_x_offset">15dp</dimen>
-    <dimen name="digital_x_offset_round">25dp</dimen>
-    <dimen name="digital_y_offset">90dp</dimen>
+    <dimen name="digital_text_size_hour">60dp</dimen>
+    <dimen name="digital_text_size_min_sec">25dp</dimen>
+    <dimen name="digital_x_offset">75dp</dimen>
+    <dimen name="digital_y_offset">100dp</dimen>
+    <dimen name="minutes_seconds_x_offset">40dp</dimen>
+    <dimen name="minutes_y_offset">-25dp</dimen>
+    <dimen name="seconds_y_offset">-0dp</dimen>
+
 </resources>
