timeline: drawing baseline

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,5 +12,13 @@
     <!--    offsets from center of the watchface-->
     <dimen name="complication_size">40dp</dimen>
     <dimen name="complication_offset_x">25dp</dimen>
-    <dimen name="complication_offset_y">40dp</dimen>
+    <dimen name="complication_offset_y">50dp</dimen>
+
+    <!--    Overview Timeline-->
+    <dimen name="timeline_length">200dp</dimen>
+    <dimen name="timeline_arrow_length">10dp</dimen>
+    <dimen name="timeline_now_bar_x">25dp</dimen>
+    <dimen name="timeline_now_bar_size">16dp</dimen>
+    <dimen name="timeline_now_bar_thickness">3dp</dimen>
+
 </resources>
