--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -1,18 +1,36 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#BD1919">
+    android:background="#000000"
+    android:gravity="center_horizontal|center_vertical"
+    android:orientation="vertical"
+    android:scrollIndicators="right"
+    android:scrollbarAlwaysDrawVerticalTrack="true"
+    android:textAlignment="center">
 
-    <FrameLayout
-        android:id="@+id/settings"
+    <TextView
+        android:id="@+id/textTitle"
+        style="@android:style/Widget.DeviceDefault.Light.TextView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="@string/settings_title" />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Hello"
-            android:textAlignment="center" />
-    </FrameLayout>
+    <Button
+        android:id="@+id/button_complication_left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="@string/settings_button_complication_left"
+        android:textAlignment="center" />
+
+    <Button
+        android:id="@+id/button_complication_right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="@string/settings_button_complication_right"
+        android:textAlignment="center" />
+
 </LinearLayout>
