--- a/app/src/main/res/values/timeline.xml
+++ b/app/src/main/res/values/timeline.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="timeline_scope">3</integer>
+
+    <integer name="calendar_update_delay">2000</integer>
+    <integer name="calendar_update_interval">60000</integer>
 </resources>
