settings: added permission switch for location

--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -14,28 +14,37 @@
     android:textAlignment="center">
 
     <TextView
-        android:id="@+id/textTitle"
+        android:id="@+id/text_complication"
         style="@android:style/Widget.DeviceDefault.Light.TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="@string/settings_title" />
+        android:text="@string/settings_complication_title" />
 
-    <Button
-        android:id="@+id/button_complication_left"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="@string/settings_button_complication_left"
-        android:textAlignment="center" />
+        android:orientation="horizontal"
+        style="?android:attr/buttonBarStyle" >
 
-    <Button
-        android:id="@+id/button_complication_right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="@string/settings_button_complication_right"
-        android:textAlignment="center" />
+        <Button
+            android:id="@+id/button_complication_left"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            android:gravity="center_horizontal"
+            android:text="@string/settings_button_complication_left"
+            android:textAlignment="center" />
+
+        <Button
+            android:id="@+id/button_complication_right"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            android:gravity="center_horizontal"
+            android:text="@string/settings_button_complication_right"
+            android:textAlignment="center" />
+    </LinearLayout>
 
     <Switch
         android:id="@+id/calendar_permission"
@@ -43,6 +52,13 @@
         android:layout_height="wrap_content"
         android:checked="false"
         android:text="@string/settings_calendar_permission" />
+
+    <Switch
+        android:id="@+id/location_permission"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="false"
+        android:text="@string/settings_location_permission" />
 
     <Switch
         android:id="@+id/hour_format_12"
@@ -57,7 +73,8 @@
         android:layout_height="wrap_content"
         android:gravity="clip_horizontal"
         android:text="@string/settings_weather_title"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:visibility="gone" />
 
     <EditText
         android:id="@+id/weather_api_key"
