--- a/app/src/main/res/values/timeline.xml
+++ b/app/src/main/res/values/timeline.xml
@@ -6,4 +6,6 @@
     <integer name="calendar_update_interval">60000</integer>
     <integer name="weather_update_delay">2000</integer>
     <integer name="weather_update_interval">600000</integer>
+    <integer name="location_update_delay">1000</integer>
+    <integer name="location_update_interval">600</integer>
 </resources>
