--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="hour_text">#ffffff</color>
     <color name="minute_text">#ffffff</color>
     <color name="second_text">#bbbbbb</color>
+
+    <color name="temperature">#FF5722</color>
+    <color name="precipitation">#1E1EB6</color>
+    <color name="snow">#E1DFDC</color>
 </resources>
