--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,4 +29,6 @@
     <dimen name="event_bar_height">5dp</dimen>
     <dimen name="event_bar_offset">-5dp</dimen>
     <dimen name="event_title_offset">-10dp</dimen>
+
+    <dimen name="temp_scale_40_degrees">40dp</dimen>
 </resources>
