--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="second_text">#bbbbbb</color>
 
     <color name="temperature">#FF5722</color>
+    <color name="temperature_ambient">#bbbbbb</color>
     <color name="precipitation">#1E1EB6</color>
     <color name="snow">#E1DFDC</color>
 </resources>
