weather: minimalistic precipitation graph

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,4 +31,5 @@
     <dimen name="event_title_offset">-10dp</dimen>
 
     <dimen name="temp_scale_40_degrees">40dp</dimen>
+    <dimen name="precipitation_scale_100_percent">-50dp</dimen>
 </resources>
