--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="temperature">#FF5722</color>
     <color name="temperature_ambient">#bbbbbb</color>
     <color name="precipitation">#1E1EB6</color>
+    <color name="precipitation_ambient">#bbbbbb</color>
     <color name="snow">#E1DFDC</color>
 </resources>
