--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -32,4 +32,5 @@
 
     <dimen name="temp_scale_40_degrees">40dp</dimen>
     <dimen name="precipitation_scale_100_percent">-50dp</dimen>
+    <dimen name="precipitation_level_width">5dp</dimen>
 </resources>
