debug: text filed for some debugging while on the go

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,4 +34,7 @@
     <dimen name="precipitation_scale_100_percent">-50dp</dimen>
     <dimen name="precipitation_level_width">5dp</dimen>
     <dimen name="precipitation_minutely_scale_1mm">5dp</dimen>
+
+    <dimen name="debug_text_x">35dp</dimen>
+    <dimen name="debug_text_y">180dp</dimen>
 </resources>
