calendar: simulated mock calendar for testing

--- a/app/src/main/res/values/preferences.xml
+++ b/app/src/main/res/values/preferences.xml
@@ -3,4 +3,6 @@
     <string name="preference_hour_format_12_key">preference_12_hour_format_key</string>
     <bool name="hour_format_12_default">false</bool>
     <string name="preference_weather_api_key">OpenWeatherMap API key</string>
+
+    <bool name="simulated_calendar">true</bool>
 </resources>
