--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -22,10 +22,10 @@
         android:text="@string/settings_complication_title" />
 
     <LinearLayout
+        style="?android:attr/buttonBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        style="?android:attr/buttonBarStyle" >
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/button_complication_left"
@@ -34,7 +34,8 @@
             android:layout_height="36dp"
             android:gravity="center_horizontal"
             android:text="@string/settings_button_complication_left"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/button_complication_right"
@@ -43,7 +44,8 @@
             android:layout_height="36dp"
             android:gravity="center_horizontal"
             android:text="@string/settings_button_complication_right"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textSize="10sp" />
     </LinearLayout>
 
     <Switch
@@ -82,6 +84,7 @@
         android:layout_height="wrap_content"
         android:autofillHints="@string/settings_weather_input_api_key_hint"
         android:hint="@string/settings_weather_input_api_key_hint"
-        android:inputType="text" />
+        android:inputType="text"
+        android:textAlignment="center" />
 
 </LinearLayout>
